@@ -42,8 +42,6 @@ import java.io.UncheckedIOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -149,14 +147,12 @@ public class ConnectPluginPath {
         if (subcommand == null) {
             throw new ArgumentParserException("No subcommand specified", parser);
         }
-        switch (subcommand) {
-            case "list":
-                return new Config(Command.LIST, locations, false, false, out, err);
-            case "sync-manifests":
-                return new Config(Command.SYNC_MANIFESTS, locations, namespace.getBoolean("dry_run"), namespace.getBoolean("keep_not_found"), out, err);
-            default:
-                throw new ArgumentParserException("Unrecognized subcommand: '" + subcommand + "'", parser);
-        }
+        return switch (subcommand) {
+            case "list" -> new Config(Command.LIST, locations, false, false, out, err);
+            case "sync-manifests" ->
+                new Config(Command.SYNC_MANIFESTS, locations, namespace.getBoolean("dry_run"), namespace.getBoolean("keep_not_found"), out, err);
+            default -> throw new ArgumentParserException("Unrecognized subcommand: '" + subcommand + "'", parser);
+        };
     }
 
     private static Set<Path> parseLocations(ArgumentParser parser, Namespace namespace) throws ArgumentParserException, TerseException {
@@ -197,25 +193,11 @@ public class ConnectPluginPath {
     }
 
     enum Command {
-        LIST, SYNC_MANIFESTS;
+        LIST, SYNC_MANIFESTS
     }
 
-    private static class Config {
-        private final Command command;
-        private final Set<Path> locations;
-        private final boolean dryRun;
-        private final boolean keepNotFound;
-        private final PrintStream out;
-        private final PrintStream err;
-
-        private Config(Command command, Set<Path> locations, boolean dryRun, boolean keepNotFound, PrintStream out, PrintStream err) {
-            this.command = command;
-            this.locations = locations;
-            this.dryRun = dryRun;
-            this.keepNotFound = keepNotFound;
-            this.out = out;
-            this.err = err;
-        }
+    private record Config(Command command, Set<Path> locations, boolean dryRun, boolean keepNotFound, PrintStream out,
+                          PrintStream err) {
 
         @Override
         public String toString() {
@@ -266,16 +248,9 @@ public class ConnectPluginPath {
      * <p>This is unique to the (source, class, type) tuple, and contains additional pre-computed information
      * that pertains to this specific plugin.
      */
-    private static class Row {
-        private final ManifestWorkspace.SourceWorkspace<?> workspace;
-        private final String className;
-        private final PluginType type;
-        private final String version;
-        private final List<String> aliases;
-        private final boolean loadable;
-        private final boolean hasManifest;
-
-        public Row(ManifestWorkspace.SourceWorkspace<?> workspace, String className, PluginType type, String version, List<String> aliases, boolean loadable, boolean hasManifest) {
+    private record Row(ManifestWorkspace.SourceWorkspace<?> workspace, String className, PluginType type,
+                       String version, List<String> aliases, boolean loadable, boolean hasManifest) {
+        private Row(ManifestWorkspace.SourceWorkspace<?> workspace, String className, PluginType type, String version, List<String> aliases, boolean loadable, boolean hasManifest) {
             this.workspace = Objects.requireNonNull(workspace, "workspace must be non-null");
             this.className = Objects.requireNonNull(className, "className must be non-null");
             this.version = Objects.requireNonNull(version, "version must be non-null");
@@ -283,10 +258,6 @@ public class ConnectPluginPath {
             this.aliases = Objects.requireNonNull(aliases, "aliases must be non-null");
             this.loadable = loadable;
             this.hasManifest = hasManifest;
-        }
-
-        private boolean loadable() {
-            return loadable;
         }
 
         private boolean compatible() {
@@ -326,11 +297,12 @@ public class ConnectPluginPath {
             rowAliases.add(PluginUtils.prunedName(pluginDesc));
             rows.add(newRow(workspace, pluginDesc.className(), new ArrayList<>(rowAliases), pluginDesc.type(), pluginDesc.version(), true));
             // If a corresponding manifest exists, mark it as loadable by removing it from the map.
-            nonLoadableManifests.getOrDefault(pluginDesc.className(), Collections.emptySet()).remove(pluginDesc.type());
+            var types = nonLoadableManifests.get(pluginDesc.className());
+            if (types != null) types.remove(pluginDesc.type());
         });
         nonLoadableManifests.forEach((className, types) -> types.forEach(type -> {
             // All manifests which remain in the map are not loadable
-            rows.add(newRow(workspace, className, Collections.emptyList(), type, PluginDesc.UNDEFINED_VERSION, false));
+            rows.add(newRow(workspace, className, List.of(), type, PluginDesc.UNDEFINED_VERSION, false));
         }));
         return rows;
     }
@@ -436,8 +408,8 @@ public class ConnectPluginPath {
     }
 
     private static PluginScanResult discoverPlugins(PluginSource source, ReflectionScanner reflectionScanner, ServiceLoaderScanner serviceLoaderScanner) {
-        PluginScanResult serviceLoadResult = serviceLoaderScanner.discoverPlugins(Collections.singleton(source));
-        PluginScanResult reflectiveResult = reflectionScanner.discoverPlugins(Collections.singleton(source));
-        return new PluginScanResult(Arrays.asList(serviceLoadResult, reflectiveResult));
+        PluginScanResult serviceLoadResult = serviceLoaderScanner.discoverPlugins(Set.of(source));
+        PluginScanResult reflectiveResult = reflectionScanner.discoverPlugins(Set.of(source));
+        return new PluginScanResult(List.of(serviceLoadResult, reflectiveResult));
     }
 }
